# agent-team-orchestrator

./: .editorconfig  .env.example  .gitignore  .mcp.json  .releaserc.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_CN.md  SECURITY.md  eslint.config.js  example.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  test_custom.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: EXAMPLES.md  MCP_GUIDE.md  QUICKSTART.md  architecture.md
docs/demo/: task.json  tool-audit.jsonl
docs/superpowers/plans/: 2026-07-13-ato-v0.2.0-implementation.md  2026-07-14-ato-npm-managed-runtime-implementation.md
docs/superpowers/specs/: 2026-07-13-ato-v0.2.0-design.md  2026-07-14-ato-npm-managed-runtime-design.md
roles/: architect.yaml  backend-developer.yaml  fullstack-developer.yaml
roles/schema/: role.schema.json
scripts/: clean-package.mjs
scripts/e2e/: cold-install.ps1  cold-install.sh  mcp-smoke.mjs
scripts/release/: build-manifest.mjs  prepare-npm-runtime.mjs  prepare-npm-runtime.test-node.mjs
